--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
 
 }
 
@@ -43,7 +44,6 @@
     }
 
     .allProjects {
-        min-width: 256px ;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
@@ -51,12 +51,12 @@
         align-items: center;
     }
 
-    .itemProject {
-        margin: 1% 0% 1% 0%;
+    .container {
+        min-width: 300px;
     }
 
-    .container {
-        min-width: 290px;
+    .itemProject {
+        margin: 1% 0% 1% 0%;
     }
 }
 
