--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -2,16 +2,17 @@
     height: 60px;
     background-color: lightblue;
     display: flex;
-    justify-content: center;
-}
-
-.container {
-    width: 80%;
-    border: 1px solid;
-    display: flex;
     justify-content: flex-end;
     align-items: center;
 }
+
+/*.container {*/
+/*    width: 80%;*/
+/*    border: 1px solid;*/
+/*    display: flex;*/
+/*    justify-content: flex-end;*/
+/*    align-items: center;*/
+/*}*/
 
 @media(max-width: 700px){
     .container {
