--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -1,23 +1,12 @@
 .main {
     height: 100vh;
     background-color: #f3ccff;
-    display: flex;
-    justify-content: center;
-
 }
 
-.container {
-    width: 80%;
-    border: 1px solid;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
-}
 
-.greeting {
-    display: flex;
-    flex-direction: column;
+
+.text {
+    width: 300px;
 }
 
 .photo {
@@ -26,16 +15,16 @@
     background-color: rgba(0, 0, 0, 0.34);
 }
 
-@media(max-width: 700px){
-    .container {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        align-items: center;
-    }
+/*@media(max-width: 700px){*/
+/*    .container {*/
+/*        display: flex;*/
+/*        flex-direction: column;*/
+/*        flex-wrap: wrap;*/
+/*        justify-content: space-around;*/
+/*        align-items: center;*/
+/*    }*/
 
-    .main {
-        min-width: 372px;
-    }
-}
+/*    .main {*/
+/*        min-width: 372px;*/
+/*    }*/
+/*}*/
