--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -1,63 +1,27 @@
 .projects {
-    min-height: 80vh;
     background-color: #69d3ff;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 
 .container {
-    width: 80%;
-    border: 1px solid;
-    display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
 }
 
 .myProjects {
-    width: 80%;
-    min-height: 8vh;
-    border: 1px solid;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
 }
 
 .allProjects {
-    width: 80%;
-    min-height: 40vh;
     border: 1px solid;
+    width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
 
 }
 
-@media (max-width: 834px) {
-    .projects {
-        min-width: 372px;
-    }
-
-    .container {
-        min-width: 300px;
-    }
-
-    .myProjects {
-        min-width: 300px;
-    }
-
+@media screen and (min-width: 1129px) {
     .allProjects {
-        flex-direction: column;
-        align-items: center;
-        min-width: 300px;
-    }
-
-    .itemProject {
-        margin: 1% 0% 1% 0%;
+      justify-content: space-between;
     }
 }
-
