--- a/src/Slogan/Slogan.module.css
+++ b/src/Slogan/Slogan.module.css
@@ -1,19 +1,14 @@
-.slogan {
+.sloganBlock {
     min-height: 30vh;
     background-color: #ffc1c9;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
-.container {
-    width: 80%;
-    height: 50%;
-    border: 1px solid;
-    display: flex;
+.sloganContainer {
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+
 }
 
 .sloganText {
@@ -21,19 +16,19 @@
     text-align: center;
 }
 
-@media(max-width: 700px){
-    .slogan {
-        min-width: 372px;
-    }
+/*@media(max-width: 700px){*/
+/*    .slogan {*/
+/*        min-width: 372px;*/
+/*    }*/
 
-    .container {
-        min-width: 256px ;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-    }
+/*    .container {*/
+/*        min-width: 256px ;*/
+/*        display: flex;*/
+/*        flex-direction: column;*/
+/*        flex-wrap: wrap;*/
+/*        justify-content: space-between;*/
+/*        align-items: center;*/
+/*    }*/
 
-}
+/*}*/
 
