--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,16 +1,12 @@
-.footer {
-    height: 40vh;
+.footerBlock {
+    min-height: 40vh;
     background-color: #9ee694;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.container {
-    width: 80%;
-    height: 70%;
-    border: 1px solid;
-    display: flex;
+.footerContainer {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -22,7 +18,7 @@
 
 .iconSocial {
     width: 60%;
-    height: 70px;
+    min-height: 70px;
     border: 1px solid;
     display: flex;
     flex-direction: row;
@@ -31,24 +27,24 @@
     align-items: flex-start;
 }
 
-@media(max-width: 700px) {
-    .footer {
-        min-width: 372px;
-    }
+/*@media (max-width: 700px) {*/
+/*    .footer {*/
+/*        min-width: 372px;*/
+/*    }*/
 
-    .container {
-        min-width: 256px;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: center;
-    }
+/*    .container {*/
+/*        min-width: 256px;*/
+/*        display: flex;*/
+/*        flex-direction: column;*/
+/*        flex-wrap: wrap;*/
+/*        justify-content: space-between;*/
+/*        align-items: center;*/
+/*    }*/
 
-    .iconSocial {
-        width: 100%;
-    }
+/*    .iconSocial {*/
+/*        width: 100%;*/
+/*    }*/
 
-}
+/*}*/
 
 
