--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -1,6 +1,9 @@
 .skillsBlock {
     min-height: 60vh;
     background-color: #c9ffd1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .skillsContainer {
