--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -1,5 +1,4 @@
 .projectsBlock {
-    min-height: 60vh;
     background-color: #69d3ff;
     display: flex;
     justify-content: center;
@@ -24,8 +23,8 @@
     flex-wrap: wrap;
 }
 
-@media screen and (min-width: 1129px) {
+@media screen and (max-width: 1124px) {
     .projects {
-      justify-content: space-between;
+        justify-content: center;
     }
 }
