--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,6 +1,5 @@
 .footerBlock {
-    min-height: 40vh;
-    background-color: #9ee694;
+    background-color: #2a2d36;
     display: flex;
     justify-content: center;
     align-items: center;
