--- a/src/Header/NavMenu/NavMenu.module.css
+++ b/src/Header/NavMenu/NavMenu.module.css
@@ -5,3 +5,10 @@
     justify-content: space-between;
 }
 
+@media screen and (max-width: 540px) {
+    .navMenu {
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+    }
+}
