--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,28 +1,16 @@
-.header {
+.headerContainer {
     height: 60px;
-    background-color: lightblue;
+    background-color: #2a2d36;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
 
-/*.container {*/
-/*    width: 80%;*/
-/*    border: 1px solid;*/
-/*    display: flex;*/
-/*    justify-content: flex-end;*/
-/*    align-items: center;*/
-/*}*/
-
-@media(max-width: 700px){
-    .container {
+@media screen and (max-width: 540px) {
+    .headerContainer {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: center;
         align-items: center;
     }
-    .header {
-        min-width: 372px;
-    }
 }
+
