--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -1,5 +1,5 @@
 .projectsBlock {
-    background-color: #69d3ff;
+    background-color: #f7f7f7;
     display: flex;
     justify-content: center;
     align-items: center;
