--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -1,6 +1,5 @@
 .skillsBlock {
-    min-height: 60vh;
-    background-color: #c9ffd1;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
