--- a/src/Main/Main.module.css
+++ b/src/Main/Main.module.css
@@ -1,12 +1,18 @@
 .main {
-    height: 100vh;
-    background-color: #f3ccff;
-}
 
+    height: 100vh;
+    background-color: #2a2d36;
+
+}
 
 
 .text {
     width: 300px;
+}
+
+.title {
+    height: 1px;
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
 }
 
 .photo {
@@ -14,17 +20,3 @@
     width: 300px;
     background-color: rgba(0, 0, 0, 0.34);
 }
-
-/*@media(max-width: 700px){*/
-/*    .container {*/
-/*        display: flex;*/
-/*        flex-direction: column;*/
-/*        flex-wrap: wrap;*/
-/*        justify-content: space-around;*/
-/*        align-items: center;*/
-/*    }*/
-
-/*    .main {*/
-/*        min-width: 372px;*/
-/*    }*/
-/*}*/
