--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,5 +1,6 @@
 .footerBlock {
     background-color: #2a2d36;
+    min-height: 10vh ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,24 +12,9 @@
     align-items: center;
 }
 
-.footerText {
-    background-color: gray;
-}
-
-.iconSocial {
-    width: 60%;
-    min-height: 70px;
-    border: 1px solid;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-@media screen and (max-width: 600px) {
-    .iconSocial {
-        justify-content: center;
-    }
+.footerText{
+    color: #fff;
+    text-align: center;
 }
 
 
