--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -11,7 +11,15 @@
 }
 
 .title {
-    background-color: #ffc1c9;
+    text-align: center;
+    font-size: 28px;
+    color: #333;
+    letter-spacing: 4px;
+    margin-bottom: 70px !important;
+    text-transform: uppercase;
+    font-weight: 300;
+    line-height: 1.2;
+
 }
 
 .skills {
