--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     justify-content: flex-start;
     flex-wrap: nowrap;
+    margin: 20px 0 20px 0;
 }
 
 .title {
@@ -16,7 +17,7 @@
 }
 
 .projects {
-    border: 1px solid;
+    /*border: 1px solid;*/
     width: 100%;
     display: flex;
     justify-content: space-between;
