--- a/src/Skills/Skills.module.css
+++ b/src/Skills/Skills.module.css
@@ -8,7 +8,10 @@
 .skillsContainer {
     flex-direction: column;
     justify-content: flex-start;
+    margin-top: 20px;
 }
+
+
 
 .title {
     text-align: center;
