--- a/src/common/components/Title/Title.module.css
+++ b/src/common/components/Title/Title.module.css
@@ -1,11 +1,49 @@
+.titleBlock{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .title {
-    text-align: center;
-    font-size: 28px;
-    color: #333;
-    letter-spacing: 4px;
-    margin-bottom: 70px !important;
+    font-size: 30px;
+    z-index: 1;
     text-transform: uppercase;
-    font-weight: 300;
+    position: relative;
+    display: inline-block;
+    font-weight: 700;
+    margin: 0 0 30px;
+    letter-spacing: 2px;
+    color: #333;
+    vertical-align: baseline;
     line-height: 1.2;
+    /*text-align: center;*/
+    /*font-size: 28px;*/
+    /*color: #333;*/
+    /*letter-spacing: 4px;*/
+    /*margin-bottom: 70px !important;*/
+    /*text-transform: uppercase;*/
+    /*font-weight: 300;*/
+    /*line-height: 1.2;*/
+}
+
+.title::after {
+    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
+    left: 0;
+    right: 0;
+    height: 1px;
+    width: 100%;
+    content: "";
+    bottom: -10px;
+    position: absolute;
+
+}
+
+.titleBlock span{
+    padding-bottom: 5px;
+    display: block;
+    font-size: 12px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: #878d8d;
 }
