--- a/src/Contacts/Contacts.module.scss
+++ b/src/Contacts/Contacts.module.scss
@@ -25,22 +25,71 @@
       //align-items: center;
 
       .contactsFormHead {
-          margin: 0;
-          font-size: 20px;
-          font-weight: 500;
-          margin-bottom: .5rem!important;
-          letter-spacing: 1px;
-          color: #333;
-          padding: 0;
-          border: 0;
-          line-height: 1.2;
-          display: block;
-          text-align: left;
+        margin: 0;
+        font-size: 20px;
+        font-weight: 500;
+        margin-bottom: .5rem !important;
+        letter-spacing: 1px;
+        color: #333;
+        padding: 0;
+        border: 0;
+        line-height: 1.2;
+        display: block;
+        text-align: left;
       }
 
-      input, textarea {
+      .contactsFormRow {
         width: 100%;
-        resize: none;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        vertical-align: baseline;
+        text-align: left;
+      }
+
+      .contactsFormInputContainer {
+        position: relative;
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        @media screen and (min-width: 992px) {
+          flex: 0 0 50%;
+          max-width: 50%;
+        }
+
+        .contactsFormInput {
+            visibility: visible;
+            animation-duration: 1.5s;
+            animation-name: fadeInUp;
+            margin-top: 1rem!important;
+            margin-bottom: 1rem;
+
+        }
+
+        input {
+          background: $mainColorOne;
+            padding: 15px 30px;
+            height: auto;
+            font-family: 'Open Sans', sans-serif;
+            border-radius: 2px;
+            overflow: hidden;
+            border: 1px solid #eee;
+            transition: all 0.3s ease-in-out 0s;
+            display: block;
+            width: auto;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #495057;
+        }
+
+        textarea {
+          resize: none;
+        }
       }
 
       .submitBtn {
