--- a/src/Contacts/Contacts.module.scss
+++ b/src/Contacts/Contacts.module.scss
@@ -1,7 +1,5 @@
-@import '../common/styles/sass/variables';
-
 .contactsBlock {
-  background-color: $mainColorTwo;
+  background-color: #f7f7f7;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,166 +10,28 @@
     margin-top: 20px;
 
     .contactsForm {
-      margin: 0;
-      padding: 0;
-      border: 0;
-      font-size: 100%;
-      width: 100%;
+      width: 50%;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
 
-
-      .contactsFormHead {
-        margin: 0;
-        font-size: 20px;
-        font-weight: 500;
-        margin-bottom: .5rem !important;
-        letter-spacing: 1px;
-        color: #333;
-        padding: 0;
-        border: 0;
-        line-height: 1.2;
-        display: block;
-        text-align: left;
-      }
-
-      .contactsFormRow {
+      input, textarea {
         width: 100%;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font-size: 100%;
-        vertical-align: baseline;
-        text-align: left;
-
-        .contactsFormInputContainer {
-          position: relative;
-          width: 100%;
-          padding-right: 15px;
-          padding-left: 15px;
-
-          .contactsFormInput {
-            visibility: visible;
-            animation-duration: 1.5s;
-            animation-name: fadeInUp;
-            margin-top: 1rem !important;
-            margin-bottom: 1rem;
-
-            input {
-              background: $mainColorOne;
-              padding: 15px 30px;
-              height: auto;
-              font-family: 'Open Sans', sans-serif;
-              border-radius: 2px;
-              overflow: hidden;
-              border: 1px solid #eee;
-              transition: all 0.3s ease-in-out 0s;
-              display: block;
-              width: auto;
-              font-size: 1rem;
-              font-weight: 400;
-              line-height: 1.5;
-              color: #495057;
-            }
-          }
-
-          @media screen and (min-width: 992px) {
-            flex: 0 0 50%;
-            max-width: 50%;
-          }
-        }
-
-        .contactsFormTextContainer {
-          position: relative;
-          width: 100%;
-          padding-right: 15px;
-          padding-left: 15px;
-
-          .contactsFormText {
-            visibility: visible;
-            animation-duration: 1.5s;
-            animation-name: fadeInUp;
-            margin-top: 1rem !important;
-            margin-bottom: 1rem;
-
-            textarea {
-              background: $mainColorOne;
-              height: auto;
-              resize: none;
-              padding: 15px 30px;
-              font-family: 'Open Sans', sans-serif;
-              border-radius: 2px;
-              overflow: hidden;
-              border: 1px solid #eee;
-              display: block;
-              width: 100%;
-              font-size: 1rem;
-              font-weight: 400;
-              line-height: 1.5;
-              color: #495057;
-              margin: 0;
-            }
-          }
-
-
-          @media (min-width: 992px) {
-            flex: 0 0 100%;
-            max-width: 100%;
-          }
-        }
-
-        .contactsFormButtonContainer {
-          visibility: visible;
-          animation-duration: 1.5s;
-          animation-delay: 0.5s;
-          animation-name: fadeInUp;
-          text-align: center !important;
-          margin-bottom: 3rem !important;
-          position: relative;
-          width: 100%;
-          padding-right: 15px;
-          padding-left: 15px;
-          @media screen and (min-width: 992px) {
-            flex: 0 0 100%;
-            max-width: 100%;
-          }
-
-          .submitBtn {
-            cursor: pointer;
-            padding: 12px 50px;
-            font-size: 12px;
-            font-weight: 400;
-            transition: all 0.5s;
-            letter-spacing: 2px;
-            color: $mainColorOne;
-            text-transform: uppercase;
-            outline: none !important;
-            background-color: $accentColor;
-            box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.2);
-            border-radius: 2px;
-            min-width: 140px;
-            display: inline-block;
-            text-align: center;
-            vertical-align: middle;
-            border: 1px solid transparent;
-            line-height: 1.5;
-          }
-        }
+        resize: none;
       }
 
+      .submitBtn {
+        padding: 10px 20px;
+        background-color: #d8c3ff;
+      }
 
       @media screen and (max-width: 1000px) {
-        .contactsForm {
-          width: 100%;
-        }
+        width: 100%;
       }
     }
   }
 }
+
 
 
 
