--- a/src/Contacts/Contacts.module.scss
+++ b/src/Contacts/Contacts.module.scss
@@ -9,20 +9,117 @@
     justify-content: flex-start;
     margin-top: 20px;
 
+
     .contactsForm {
       width: 50%;
       display: flex;
       flex-direction: column;
       align-items: center;
 
-      input, textarea {
-        width: 100%;
-        resize: none;
+      .formTitle {
+        display: flex;
+        align-self: flex-start;
+        font-size: 20px;
+        font-weight: 500;
+        margin: 0;
+        letter-spacing: 1px;
+        color: #333;
+        line-height: 1.2;
+        margin-bottom: .5rem !important;
       }
 
-      .submitBtn {
-        padding: 10px 20px;
-        background-color: #d8c3ff;
+      .formInputs {
+        display: flex;
+        width: 100%;
+        text-align: left;
+        padding-right: 15px;
+        padding-left: 15px;
+
+
+        input {
+          width: 50%;
+          position: relative;
+          visibility: visible;
+          animation-duration: 1.5s;
+          animation-name: fadeInUp;
+          margin-top: 1rem !important;
+          margin-bottom: 1rem;
+          margin-right: 0.5rem;
+          margin-left: 0.5rem;
+          font: 400 16px/1.8 'Open Sans', sans-serif;
+          color: #333;
+          background: #fff;
+          padding: 15px 30px;
+          height: auto;
+          border-radius: 2px;
+          overflow: hidden;
+          border: 1px solid #eee;
+          transition: all 0.3s ease-in-out 0s;
+        }
+      }
+
+      .formText {
+        display: flex;
+        width: 100%;
+        text-align: left;
+        padding-right: 15px;
+        padding-left: 15px;
+
+        textarea {
+          width: 100%;
+          min-height: 150px;
+          resize: none;
+          visibility: visible;
+          animation-duration: 1.5s;
+          animation-delay: 0.4s;
+          animation-name: fadeInUp;
+          margin-top: 1rem !important;
+          margin-bottom: 1rem;
+          margin-right: 0.5rem;
+          margin-left: 0.5rem;
+          font: 400 16px/1.8 'Open Sans', sans-serif;
+          color: #333;
+          background: #fff;
+          padding-top: 15px;
+          padding-left: 30px;
+          border-radius: 2px;
+          overflow: hidden;
+          border: 1px solid #eee;
+          transition: all 0.3s ease-in-out 0s;
+          font-size: 1rem
+
+        }
+      }
+
+      .formBtn {
+        visibility: visible;
+        animation-duration: 1.5s;
+        animation-delay: 0.5s;
+        animation-name: fadeInUp;
+        text-align: center!important;
+        margin-top: 1.5rem!important;
+        position: relative;
+        .submitBtn {
+          cursor: pointer;
+          padding: 12px 50px;
+          font-size: 12px;
+          font-weight: 400;
+          transition: all 0.5s;
+          letter-spacing: 2px;
+          color: #fff;
+          text-transform: uppercase;
+          outline: none !important;
+          background-color: #fd735a;
+          box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.2);
+          border-radius: 2px;
+          min-width: 140px;
+          display: inline-block;
+          text-align: center;
+          vertical-align: middle;
+          user-select: none;
+          border: 1px solid transparent;
+          line-height: 1.5;
+        }
       }
 
       @media screen and (max-width: 1000px) {
