--- a/src/Projects/ItemProjects/ItemProjects.module.scss
+++ b/src/Projects/ItemProjects/ItemProjects.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   text-transform: capitalize;
+  margin: 0.5rem;
 
   .itemProjectsImage {
     height: 300px;
