--- a/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
+++ b/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
@@ -1,5 +1,5 @@
 .itemIconContainer {
-    width: 100%;
+  width: 100%;
   position: relative;
   padding-right: 15px;
   padding-left: 15px;
@@ -7,7 +7,7 @@
   max-width: 33.333333%;
 
   .itemIconSocial {
-      width: 30vh;
+    width: 30vh;
     visibility: visible;
     animation-duration: 1.5s;
     animation-delay: 0.2s;
@@ -17,13 +17,38 @@
     border-radius: 2px;
     overflow: hidden;
     border: 1px solid #eee;
-      .contactIcon {
-          border: 1px solid;
-          height: 20px;
-          width: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    .contactIcon {
+      border: 1px solid;
+      height: 20px;
+      width: 20px;
+    }
+
+    .contactDetail {
+      margin-top: .5rem!important;
+      text-align: center!important;
+      a {
+        font-size: 18px;
+        font-weight: 500;
+        color: #6e7373;
+        text-decoration: underline;
+        font-family: 'Open Sans', sans-serif;
+        cursor: pointer;
       }
-      .contactDetail {
+
+      p {
+        font-family: 'Josefin Sans', sans-serif;
+        font-size: 14px;
+        color: #333;
+        font-weight: 700!important;
+        margin-top: .25rem!important;
 
       }
+    }
   }
 }
