--- a/src/Skills/ItemSkill/ItemSkills.module.scss
+++ b/src/Skills/ItemSkill/ItemSkills.module.scss
@@ -1,6 +1,6 @@
 @import '../../common/styles/sass/variables';
 
-.itemSkill {
+.itemSkillContainer {
   width: 250px;
   background-color: $mainColorTwo;
   display: flex;
