--- a/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
+++ b/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
@@ -1,10 +1,5 @@
+@import '../../common/styles/sass/variables';
 .itemIconContainer {
-  width: 100%;
-  position: relative;
-  padding-right: 15px;
-  padding-left: 15px;
-  flex: 0 0 33.333333%;
-  max-width: 33.333333%;
 
   .itemIconSocial {
     width: 30vh;
@@ -24,9 +19,16 @@
     text-align: center;
 
     .contactIcon {
-      border: 1px solid;
-      height: 20px;
-      width: 20px;
+      height: 30px;
+      width: 30px;
+      background-color: rgba(0, 0, 0, 0.23);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      border-radius: 5px;
     }
 
     .contactDetail {
