--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footerBlock {
-    background-color: #2a2d36;
+    background-color: #fff;
     min-height: 10vh ;
     display: flex;
     justify-content: center;
@@ -13,7 +13,7 @@
 }
 
 .footerText{
-    color: #fff;
+    color: #6e7373;;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
 }
