--- a/src/Header/NavMenu/NavMenu.module.scss
+++ b/src/Header/NavMenu/NavMenu.module.scss
@@ -13,7 +13,7 @@
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
-    flex-direction: row-reverse;
+    justify-content: flex-end;
     @media screen and (max-width: 992px) {
       flex-direction: row;
     }
