--- a/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
+++ b/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
@@ -1,56 +1,52 @@
 @import '../../common/styles/sass/variables';
-.itemIconContainer {
 
-  .itemIconSocial {
-    width: 30vh;
-    visibility: visible;
-    animation-duration: 1.5s;
-    animation-delay: 0.2s;
-    animation-name: fadeInUp;
-    height: 170px;
-    background: #fff;
-    border-radius: 2px;
-    overflow: hidden;
-    border: 1px solid #eee;
+.itemIconContainer {
+  min-width: 30vh;
+  height: auto;
+  background-color: $mainColorOne;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  background-position: 50% 553px;
+  margin: 0.5rem;
+  padding: 1.5rem!important;
+  flex-wrap: wrap;
+
+  .contactIcon {
+    height: 30px;
+    width: 30px;
+    background-color: rgba(0, 0, 0, 0.23);
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    border-radius: 5px;
+  }
 
-    .contactIcon {
-      height: 30px;
-      width: 30px;
-      background-color: rgba(0, 0, 0, 0.23);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-size: cover;
-      background-position: center;
-      position: relative;
-      border-radius: 5px;
+  .contactDetail {
+    margin-top: .5rem !important;
+    text-align: center !important;
+
+    a {
+      font-size: 18px;
+      font-weight: 500;
+      color: #6e7373;
+      text-decoration: underline;
+      font-family: 'Open Sans', sans-serif;
+      cursor: pointer;
     }
 
-    .contactDetail {
-      margin-top: .5rem!important;
-      text-align: center!important;
-      a {
-        font-size: 18px;
-        font-weight: 500;
-        color: #6e7373;
-        text-decoration: underline;
-        font-family: 'Open Sans', sans-serif;
-        cursor: pointer;
-      }
+    p {
+      font-family: 'Josefin Sans', sans-serif;
+      font-size: 14px;
+      color: #333;
+      font-weight: 700 !important;
+      margin-top: .25rem !important;
 
-      p {
-        font-family: 'Josefin Sans', sans-serif;
-        font-size: 14px;
-        color: #333;
-        font-weight: 700!important;
-        margin-top: .25rem!important;
-
-      }
     }
   }
 }
