--- a/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
+++ b/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
@@ -1,7 +1,7 @@
 @import '../../common/styles/sass/variables';
 
 .itemIconContainer {
-  min-width: 30vh;
+  width: 25vh;
   height: auto;
   background-color: $mainColorOne;
   display: flex;
