--- a/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
+++ b/src/SocialNetwork/ItemIconSocial/ItemIconSocial.module.scss
@@ -11,7 +11,7 @@
   cursor: pointer;
   background-position: 50% 553px;
   margin: 0.5rem;
-  padding: 1.5rem!important;
+  padding: 1.5rem !important;
   flex-wrap: wrap;
 
   .contactIcon {
@@ -49,4 +49,11 @@
 
     }
   }
+
+   @media screen and (max-width: 686px) {
+
+  justify-content: center;
+  width: 100%;
+
+}
 }
