--- a/src/Slogan/Slogan.module.scss
+++ b/src/Slogan/Slogan.module.scss
@@ -26,60 +26,59 @@
   .sloganContainer {
     flex-direction: column;
     justify-content: space-between;
-    @media screen and (min-width: 992px) {
-      max-width: 960px;
-      .sloganRow {
 
-        .sloganText {
-          color: #fff;
-          font-size: 30px;
-          z-index: 1;
-          text-transform: uppercase;
-          position: relative;
-          display: inline-block;
-          font-weight: 700;
-          letter-spacing: 2px;
-          line-height: 1.2;
+    .sloganRow {
 
-          &::after {
-            background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
-            position: absolute;
-            left: 0;
-            right: 0;
-            height: 1px;
-            width: 100%;
-            content: "";
-            bottom: -30px;
-          }
-        }
+      .sloganText {
+        color: #fff;
+        font-size: 30px;
+        z-index: 1;
+        text-transform: uppercase;
+        position: relative;
+        display: inline-block;
+        font-weight: 700;
+        letter-spacing: 2px;
+        line-height: 1.2;
 
-        .sloganBtn {
-            text-decoration: none;
-            background-color: transparent;
-            color: #fff;
-            border: 1px solid rgba(255, 255, 255, 0.4);
-            padding: 12px 50px;
-            font-size: 12px;
-            font-weight: 400;
-            transition: all 0.5s;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            outline: none !important;
-            box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.2);
-            border-radius: 2px;
-            min-width: 140px;
-            display: inline-block;
-            text-align: center;
-            vertical-align: middle;
-            line-height: 1.5;
-            margin-top: 30px;
+        &::after {
+          background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgb(165, 165, 165), rgba(0, 0, 0, 0));
+          position: absolute;
+          left: 0;
+          right: 0;
+          height: 1px;
+          width: 100%;
+          content: "";
+          bottom: -30px;
         }
       }
+
+      .sloganBtn {
+        text-decoration: none;
+        background-color: transparent;
+        color: #fff;
+        border: 1px solid rgba(255, 255, 255, 0.4);
+        padding: 12px 50px;
+        font-size: 12px;
+        font-weight: 400;
+        transition: all 0.5s;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        outline: none !important;
+        box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.2);
+        border-radius: 2px;
+        min-width: 140px;
+        display: inline-block;
+        text-align: center;
+        vertical-align: middle;
+        line-height: 1.5;
+        margin-top: 30px;
+      }
     }
-
-
   }
+
+
 }
+
 
 
 
