--- a/src/Skills/ItemSkill/ItemSkills.module.scss
+++ b/src/Skills/ItemSkill/ItemSkills.module.scss
@@ -6,10 +6,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  text-align: center;
   cursor: pointer;
-    background-position: 50% 553px;
+  background-position: 50% 553px;
   margin: 0.5rem;
+  padding: 1.5rem !important;
 
 
   .itemSkillsImage {
@@ -30,8 +30,6 @@
   }
 
   .description {
-    height: 33%;
-    width: 100%;
     font-weight: 500;
     color: #6e7373;
     font-family: 'Open Sans', sans-serif;;
