--- a/src/SocialNetwork/ItemContact/ItemContact.module.scss
+++ b/src/SocialNetwork/ItemContact/ItemContact.module.scss
@@ -1,7 +1,7 @@
 @import '../../common/styles/sass/variables';
 
 .itemIconContainer {
-  width: 25vh;
+  width: 20vh;
   height: auto;
   background-color: $mainColorOne;
   display: flex;
@@ -14,22 +14,24 @@
   padding: 1.5rem !important;
   flex-wrap: wrap;
 
-  .contactIcon {
-    height: 30px;
-    width: 30px;
-    background-color: rgba(0, 0, 0, 0.23);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    border-radius: 5px;
-  }
-
   .contactDetail {
     margin-top: .5rem !important;
-    text-align: center !important;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .contactIcon {
+      height: 30px;
+      width: 30px;
+      background-color: rgba(0, 0, 0, 0.23);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-size: cover;
+      background-position: center;
+      position: relative;
+      border-radius: 5px;
+    }
 
     a {
       font-size: 18px;
@@ -45,7 +47,8 @@
       font-size: 14px;
       color: #333;
       font-weight: 700 !important;
-      margin-top: .25rem !important;
+      margin-top: .5rem !important;
+      margin: 0;
 
     }
   }
