--- a/src/Components/Main/Main.module.scss
+++ b/src/Components/Main/Main.module.scss
@@ -1,4 +1,4 @@
-@import '../common/styles/sass/variables';
+@import '../../common/styles/sass/variables';
 .mainBlock {
   height: 100vh;
   background-color: #2a2d36;
