--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -1,4 +1,4 @@
-@import '../common/styles/sass/variables';
+@import '../../common/styles/sass/variables';
 .projectsBlock {
   background-color: $mainColorTwo;
   display: flex;
