--- a/src/Components/Skills/ItemSkill/ItemSkills.module.scss
+++ b/src/Components/Skills/ItemSkill/ItemSkills.module.scss
@@ -1,4 +1,4 @@
-@import '../../common/styles/sass/variables';
+@import '../../../common/styles/sass/variables';
 
 .itemSkillContainer {
   width: 250px;
