--- a/src/Components/SocialNetwork/ItemContact/ItemContact.module.scss
+++ b/src/Components/SocialNetwork/ItemContact/ItemContact.module.scss
@@ -1,4 +1,4 @@
-@import '../../common/styles/sass/variables';
+@import '../../../common/styles/sass/variables';
 
 .itemIconContainer {
   width: 20vh;
