--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -21,7 +21,8 @@
       position: relative;
     }
 
-    .headerMiniDtlRow {
+    .headerDtlRow {
+      height: 50px;
       width: 100%;
       display: flex;
       align-items: center;
