--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: space-between;
     position: relative;
+    max-width: 90%;
 
     @media (max-width: 1000px) {
       display: flex;
@@ -22,7 +23,7 @@
     }
 
     .headerDtlRow {
-      height: 50px;
+      height: 30px;
       width: 100%;
       display: flex;
       align-items: center;
