--- a/src/Components/Header/NavMenu/LinksBlock/LinksBlock.module.scss
+++ b/src/Components/Header/NavMenu/LinksBlock/LinksBlock.module.scss
@@ -10,6 +10,7 @@
   text-decoration: none;
   padding: .5rem 1rem;
   font-family: 'Open Sans', sans-serif;
+
 }
 
 .linkOnFocus {
@@ -24,6 +25,11 @@
   text-decoration: none;
   padding: .5rem 1rem;
   font-family: 'Open Sans', sans-serif;
+  //&:hover{
+  //  color: rgba(0,0,0,.7);
+  //  opacity: 1;
+  //}
+
 
   &::after {
     position: absolute;
