--- a/src/Components/ContactsForm/ContactsForm.module.scss
+++ b/src/Components/ContactsForm/ContactsForm.module.scss
@@ -131,6 +131,10 @@
           user-select: none;
           border: 1px solid transparent;
           line-height: 1.5;
+          &:hover{
+            transform: translateY(-5px);
+            box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
+          }
         }
       }
 
