--- a/src/Components/AboutMe/AboutMe.module.scss
+++ b/src/Components/AboutMe/AboutMe.module.scss
@@ -11,8 +11,7 @@
   border-radius: 5px;
   transition: 0.5s;
   padding: 0 !important;
-  max-width: 800px;
-
+  max-width: 900px;
 
 
   &::before {
@@ -36,18 +35,18 @@
     border-radius: 5px;
     max-width: 100%;
 
-&::after{
-  content: "";
-  position: absolute;
-  right: -80px;
-  z-index: -354;
-  height: 200px;
-  width: 200px;
-  display: block;
-  background: url(../AboutMe/patternAboutMe.png);
-  background-size: 155px;
-  top: -80px;
-}
+    &::after {
+      content: "";
+      position: absolute;
+      right: -80px;
+      z-index: -354;
+      height: 200px;
+      width: 200px;
+      display: block;
+      background: url(../AboutMe/patternAboutMe.png);
+      background-size: 155px;
+      top: -80px;
+    }
 
     .AboutMeRow {
       display: flex;
@@ -65,20 +64,28 @@
         padding-left: 15px;
 
         h2 {
+          font: 400 16px/1.8 'Josefin Sans', sans-serif;
           font-size: 32px;
           font-weight: 500;
           margin: 0 0 30px;
           letter-spacing: 2px;
           color: #333;
           line-height: 1.2;
+
         }
 
         p {
-          font-size: 20px;
-          font-weight: 300 !important;
-          margin-top: 1.5rem !important;
-          color: #6e7373;
+          font: 400 16px/1.8 'Josefin Sans', sans-serif;
           font-family: 'Open Sans', sans-serif;
+          color: #6e7373;
+          margin-top: 1.5rem !important;
+          font-weight: 300 !important;
+          font-size: 20px;
+
+
+
+
+
         }
       }
 
