--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -1,4 +1,5 @@
 @import '../../common/styles/sass/variables';
+
 .projectsBlock {
   background-color: $mainColorTwo;
   display: flex;
@@ -17,10 +18,26 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      @media screen and (max-width: 1165px) {
-        justify-content: center;
+
+      .animation {
+        display: flex;
+        width: 100%;
+        align-content: center;
       }
+
+      @media screen and (max-width: 1164px) {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+      }
+
     }
+  }
+
+  @media screen and (max-width: 450px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
   }
 }
 
