--- a/src/Components/Skills/ItemSkill/ItemSkills.module.scss
+++ b/src/Components/Skills/ItemSkill/ItemSkills.module.scss
@@ -19,8 +19,8 @@
 
 
   .itemSkillsImage {
-    height: 60px;
-    width: 60px;
+    height: 100px;
+    width: 100px;
     background-color: rgba(0, 0, 0, 0.23);
     display: flex;
     justify-content: center;
@@ -29,6 +29,7 @@
     background-position: center;
     position: relative;
     border-radius: 5px;
+    margin: 1em 0;
   }
 
   .itemSkillsName {
