--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -33,6 +33,10 @@
     flex-wrap: wrap;
 }
 
+.animation{
+    display: flex;
+}
+
 @media screen and (max-width: 1000px) {
     .skills {
         justify-content: center;
