--- a/src/Components/SocialNetwork/ItemContact/ItemContact.module.scss
+++ b/src/Components/SocialNetwork/ItemContact/ItemContact.module.scss
@@ -1,22 +1,22 @@
 @import '../../../common/styles/sass/variables';
 
 .itemIconContainer {
-  width: 20vh;
+  width: 10vh;
   height: auto;
-  background-color: $mainColorOne;
+  background-color: $mainColorTwo;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   background-position: 50% 553px;
-  margin: 0.5rem;
+  //margin: 0.5rem;
   padding: 1.5rem !important;
   flex-wrap: wrap;
   transition: all 0.3s ease-in-out 0s;
 
   &:hover {
-    transform: translateY(-5px);
-    box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
+    transform: translateY(-8px);
+    //box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
     transition: all 0.3s ease-in-out 0s;
   }
 
