--- a/src/Components/AboutMe/AboutMe.module.scss
+++ b/src/Components/AboutMe/AboutMe.module.scss
@@ -1,6 +1,6 @@
 .AboutMeBlock {
   opacity: 1;
-  visibility: visible;
+  visibility: hidden;
   transform: translateY(0px);
   margin: 0 auto;
   background: #fff;
