--- a/src/Components/Projects/ItemProjects/ItemProjects.module.scss
+++ b/src/Components/Projects/ItemProjects/ItemProjects.module.scss
@@ -1,15 +1,12 @@
 @import '../../../common/styles/sass/variables';
 
 .itemProject {
-
   width: 450px;
-  //min-width: 320px;
   display: flex;
   flex-direction: column;
   text-transform: capitalize;
   margin: 0.5rem;
   background-color: $mainColorTwo;
-
 
   .itemProjectsImage {
     height: 300px;
@@ -33,11 +30,11 @@
     }
 
     .itemProjectsButton {
+      font-family: 'Open Sans', sans-serif;
       padding: 11px 20px;
       background: $mainColorTwo;
       font-size: 14px;
       border-radius: 2px;
-      font-family: 'Open Sans', sans-serif;
       font-weight: 500;
       margin-bottom: 0 !important;
       letter-spacing: 1px;
@@ -45,21 +42,21 @@
       line-height: 1.2;
       position: relative;
       z-index: 1;
-      box-shadow: 0px 10px 40px 0px rgba(0,0,0,0.2);
+      box-shadow: 0px 10px 40px 0px rgba(0, 0, 0, 0.2);
       transition: all 0.3s ease-in-out 0s;
       text-decoration: none;
-      &:hover{
+
+      &:hover {
         transform: translateY(-5px);
         transition: all 0.5s;
         box-shadow: 0px 4px 8px rgba(134, 151, 168, 0.1);
       }
     }
-
   }
 
   .itemProjectsDescription {
-    font-weight: 500;
     font-family: 'Open Sans', sans-serif;
+    font-weight: 500;
     color: #6e7373;
     font-size: 100%;
     vertical-align: baseline;
@@ -74,6 +71,7 @@
     text-align: center !important;
     margin-top: 1rem !important;
   }
+
   @media screen and (max-width: 600px) {
     width: 100%;
   }
