--- a/src/Components/Projects/Projects.module.scss
+++ b/src/Components/Projects/Projects.module.scss
@@ -17,20 +17,21 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
 
       .animation {
         display: flex;
         width: 100%;
         align-content: center;
+        justify-content: center;
       }
 
-      @media screen and (max-width: 1164px) {
+      @media screen and (max-width: 1165px) {
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
+        flex-wrap: wrap;
       }
-
     }
   }
 
