--- a/src/Components/SocialNetwork/Contacts.module.css
+++ b/src/Components/SocialNetwork/Contacts.module.css
@@ -22,7 +22,7 @@
     min-height: 70px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     flex-direction: row;
     /*justify-content: center;*/
