--- a/src/Components/AboutMe/AboutMe.module.scss
+++ b/src/Components/AboutMe/AboutMe.module.scss
@@ -1,17 +1,18 @@
 .AboutMeBlock {
-  opacity: 1;
-  visibility: hidden;
-  transform: translateY(0px);
-  margin: 0 auto;
-  background: #fff;
-  margin-top: -200px;
-  z-index: 100;
-  position: relative;
-  width: 95%;
-  border-radius: 5px;
-  transition: 0.5s;
-  padding: 0 !important;
-  max-width: 900px;
+  display: none;
+  //opacity: 1;
+  //visibility: hidden;
+  //transform: translateY(0px);
+  //margin: 0 auto;
+  //background: #fff;
+  //margin-top: -200px;
+  //z-index: 100;
+  //position: relative;
+  //width: 95%;
+  //border-radius: 5px;
+  //transition: 0.5s;
+  //padding: 0 !important;
+  //max-width: 900px;
 
 
 
@@ -130,6 +131,22 @@
     align-items: center;
     position: relative;
   }
+}
+.AboutMeBlockIn{
+  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0px);
+  margin: 0 auto;
+  background: #fff;
+  margin-top: -200px;
+  z-index: 100;
+  position: relative;
+  width: 95%;
+  border-radius: 5px;
+  transition: 0.5s;
+  padding: 0 !important;
+  max-width: 900px;
 }
 
 
